very important direction fix

--- a/frontend/discord_auth_page.html
+++ b/frontend/discord_auth_page.html
@@ -129,7 +129,7 @@
                 return;
             }
             registerButton.hidden = false;
-            loginStatus.innerText = "Success!\nYou can now finish registering by clicking the button above.";
+            loginStatus.innerText = "Success!\nYou can now finish registering by clicking the button below.";
         } else {
             const acornUsername = respJson['username'];
             let tempLoginToken = localStorage.getItem("tempLoginToken");
