--- a/frontend/eula.html
+++ b/frontend/eula.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-<h1>AcornGM - End User Licence Agreement</h1>
+<h1>End User Licence Agreement</h1>
 <p>
     This License applies to:
     the <a href="https://github.com/BioTomateDE/AcornGM">"AcornGM Frontend"</a> application,
@@ -15,6 +15,7 @@
     and the <a href="https://github.com/BioTomateDE/AcornGMBackend">"AcornGM Backend"</a> servers used in support of the application.
 </p>
 
+<h2>General Licence</h2>
 <p>
 Permission is hereby granted to any individual to install, use, and modify this software for <strong>personal, non-commercial purposes</strong>, subject to the following conditions:
 </p>
@@ -42,8 +43,61 @@ Permission is hereby granted to any individual to install, use, and modify this 
     </ol>
 
     <p>
-    For commercial licensing or exceptions, contact: [<a href="mailto:latuskati+eula@gmail.com?subject=Licence%20Exception%20Request%20for%20AcornGM">latuskati+eula@gmail.com</a>]
+    For commercial licensing or exceptions, contact <a href="mailto:latuskati+eula@gmail.com?subject=Licence%20Exception%20Request%20for%20AcornGM">latuskati+eula@gmail.com</a>.
     </p>
+
+<!--<h2>Application-Specific Conditions</h2>-->
+<!--<p>-->
+<!--    In addition to the licensing terms above, please note the following clarifications and rules for using this software ("AcornGM"):-->
+<!--</p>-->
+<!--<ul>-->
+<!--    <li>AcornGM is only tool to export mods from GameMaker games (<code>data.win</code> files) or to load said mods.-->
+<!--    You must still have a valid licence to the game to proceed with either.</li>-->
+<!--    <li>Additionally, AcornGM is not responsible for any harm done to your computer or any personal information stolen as a result of loading malicious or vulnerable mods.-->
+<!--    The creator (BioTomateDE) does also not take any responsibility for any illegal or game licence violating mod-->
+<!--        exported, loaded, uploaded to the AcornGM servers, or downloaded using AcornGM.</li>-->
+<!--    <li>You must not use this tool to distribute malware, spyware, or unauthorized code.-->
+<!--        Users of your mod must be clearly warned by a disclaimer in the mod's description if the mod does anything "unexpected",-->
+<!--        such as creating, deleting, reading or writing to files outside the game's savedata location (AppData by default).</li>-->
+<!--    <li>If you export a mod breaching this EULA or the game's EULA or export that mod to the AcornGM servers,-->
+<!--        your AcornGM account and your IP address may be permanently banned from accessing the AcornGM servers.-->
+<!--    </li>-->
+<!--    <li>The tool must not be used in violation of third-party game terms (e.g., GameMaker’s EULA or licensing terms).</li>-->
+<!--</ul>-->
+
+<h2>Application-Specific Conditions</h2>
+<p>
+    In addition to the licensing terms above, the following rules and clarifications apply specifically to the use of this software ("AcornGM"):
+</p>
+<ul>
+    <li><strong>Legitimate Use Only</strong>: AcornGM may only be used to export or load mods for GameMaker games via <code>data.win</code> files. You must have a valid, legally obtained license to the original game to use this tool for that game.</li>
+
+    <li><strong>Liability Disclaimer</strong>: The creator of AcornGM (BioTomateDE) assumes no responsibility for any harm caused to your system, data, or personal information resulting from the use of malicious or unsafe mods. Use mods at your own risk.</li>
+
+    <li><strong>Illegal or Unauthorized Content</strong>: The creator is not responsible for any illegal activity, including but not limited to:
+        <ul>
+            <li>Mods that violate game licenses or intellectual property rights,</li>
+            <li>Mods exported, loaded, uploaded to, or downloaded from AcornGM servers that infringe third-party rights.</li>
+        </ul>
+    </li>
+
+    <li><strong>Malware and User Disclosure</strong>: You may not use AcornGM to distribute malware, spyware, or unauthorized code. If your mod performs actions outside typical behavior (e.g., accessing files outside the save directory), this must be clearly disclosed in the mod’s description through a visible disclaimer.</li>
+
+    <li><strong>Enforcement</strong>: Any use of AcornGM in violation of this EULA or the EULA of a target game may result in:
+        <ul>
+            <li>Permanent banning of your AcornGM account,</li>
+            <li>Blocking of your IP address from accessing AcornGM servers,</li>
+            <li>Removal of your uploaded content from AcornGM infrastructure.</li>
+        </ul>
+    </li>
+
+    <li><strong>Third-Party Terms</strong>: You must comply with the terms and licensing conditions of any third-party software used in conjunction with AcornGM, including but not limited to GameMaker and any relevant game publisher terms.</li>
+</ul>
+
+<br>
+<footer>
+    <p>© 2025 BioTomateDE. All rights reserved.</p>
+</footer>
 
 </body>
 </html>
