Important links -> Relevant links

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
 <h1>AcornGM</h1>
 <h2>A Mod Manager and Loader for GameMaker games</h2>
 <br>
-<p>Important Links:</p>
+<p>Relevant Links:</p>
 <p>
     <strong>GitHub:</strong>
     <a href="https://github.com/BioTomateDE/AcornGM">Visit Repository</a>
