js type warning thingy

--- a/frontend/register.html
+++ b/frontend/register.html
@@ -104,7 +104,7 @@
             // Show the error message and input border red
             usernameError.style.display = "block";
             usernameInput.style.outline = "2px solid red";
-            usernameError.style.opacity = 1; // Make error text visible
+            usernameError.style.opacity = "1"; // Make error text visible
             usernameError.style.transition = "opacity 0.3s"; // Fade in error text
         } else {
             // Hide the error message and reset the input border
