--- a/frontend/register.html
+++ b/frontend/register.html
@@ -28,6 +28,7 @@
     <input id="register-submit" type="submit" value="Register">
 </form>
 
+<script src="http_response_codes.js"></script>
 <script async defer>
     // Function to get query parameters
     function getQueryParam(param) {
@@ -92,8 +93,8 @@
         console.info(`Received response status ${response.status}`);
         if (!response.ok) {
             let resp = await response.json();
-            console.error(`Could not post temp login token; AcornGM API responded with ${response.status} - ${response.statusText}: ${resp.error}`);
-            alert(`Could not post temp login token; AcornGM API responded with ${response.status} - ${response.statusText}: ${resp.error}`);
+            console.error(`Could not post temp login token; AcornGM API responded with ${response.status} - ${HTTP_STATUS[response.status]}: ${resp.error}`);
+            alert(`Could not post temp login token; AcornGM API responded with ${response.status} - ${HTTP_STATUS[response.status]}: ${resp.error}`);
             return false;
         }
         console.info(`Request post temp login token success: ${await response.text()}`);
@@ -162,8 +163,8 @@
                 let text = await response.text();
                 console.info(`Raw response: ${text}`);
                 let resp = JSON.parse(text);
-                console.error(`Registration failed; AcornGM API responded with ${response.status} - ${response.statusText}: ${resp['error']}`);
-                alert(`Registration failed; AcornGM API responded with ${response.status} - ${response.statusText}: ${resp['error']}`);
+                console.error(`Registration failed; AcornGM API responded with ${response.status} - ${HTTP_STATUS[response.status]}: ${resp['error']}`);
+                alert(`Registration failed; AcornGM API responded with ${response.status} - ${HTTP_STATUS[response.status]}: ${resp['error']}`);
                 submitButton.enabled = true;
                 return;
             }
